Fixed profiler z-index while hovering over menu splitter

--- a/wwwroot/web-components/profiler/profiler.scss
+++ b/wwwroot/web-components/profiler/profiler.scss
@@ -6,6 +6,7 @@
     --vi-profiler-entry-height: var(--theme-h2);
     --vi-profiler-entry-level-gap: var(--theme-h5);
     --vi-profiler-header-height: var(--theme-h3);
+    z-index: 100;
 
     vi-icon {
         fill: white;
